--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,11 @@
 <H2>Student Listing</H2>
-
+<hr>
 <% @students.each do |student| %>
-<p>First Name: <%= student.first_name %></p>
+<p>First Name: <%= student.pretty_name %></p>
 <p>Last Name: <%= student.last_name %></p>
-<p>House: <%= student.house %></p>
+<p>House: <%= student.house.name %></p>
 <p>Age: <%= student.age %></p>
+<img class="house_logo" src="<%= student.house.logo_url %>" >
+
+<hr>
 <% end %>
