--- a/views/new.erb
+++ b/views/new.erb
@@ -3,21 +3,20 @@
 <form method="POST" action="/students">
   <label for="first-name">First Name: </label>
   <input id="first-name" type="text" name="first_name"/>
-
+  <p>
   <label for="last-name">Last Name: </label>
   <input id="last-name" type="text" name="last_name"/>
-
-  <label for="house">House: </label>
-  <select id="house" name="house">
-    <option value="Gryffindor">Gryffindor</option>
-    <option value="Slytherin">Slytherin</option>
-    <option value="Hufflepuff">Hufflepuff</option>
-    <option value="Ravenclaw">Ravenclaw</option>
+  <p>
+  <label for="house-select">House: </label>
+  <select type="number" id="house-select" name="house_id">
+    <% @houses.each do |house| %>
+      <option value="<%=house.id%>"><%= house.name %></option>
+    <% end %>  
   </select>
-
+  <p>
   <label for="age">Age: </label>
   <input id="age" type="number" name="age"/>
-
+  <p></p>
   <button type="submit">Add Student</button>
 
 </form>
